--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
                     <img src="img/profile-1.jpeg" alt="">
                 </div> 
                 <div class="hendel">
-                    <h4>beg joker</h4>
-                    <p class="text-gry">@thebegjoker</p>
+                    <h4>Rohail John</h4>
+                    <p class="text-gry">@therohailjohn</p>
                 </div>  
               </div>
 
